# satsearch

./: .gitignore  README.md  STATUS.md  electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DISTRIBUTION.md  HOW-TO-RUN.md
scripts/: fetch-uv.mjs
sidecar/: pyproject.toml
sidecar/satsearch_sidecar/: __main__.py  config.py  fingerprint.py  geo.py  gpu.py  importer.py  ingest.py  jobs.py  labels.py  logging_setup.py  main.py  maintenance.py  preview.py  satimg_layout.py  settings.py  shards.py  siglip.py  sources.py  store.py  tiles.py  version.py
sidecar/tests/: bench_latency.py  gpu_smoke.py  live_smoke.py  test_fingerprint.py  test_geo.py  test_gpu.py  test_importer.py  test_ingest.py  test_labels.py  test_logging.py  test_main.py  test_maintenance.py  test_satimg_layout.py  test_settings.py  test_shards.py  test_siglip.py  test_sources.py  test_store.py  test_tiles.py  test_version.py
src/main/: index.ts  ipc.ts  pathGuard.ts  protocol.ts  provision.ts  sidecar.ts
src/main/services/: api.ts  sources.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  AppShell.tsx
src/renderer/src/assets/: main.css
src/renderer/src/components/: DetailPanel.tsx  HealthGate.tsx  ImportPreviewDialog.tsx  IngestProgress.tsx  LabelPanel.tsx  MapView.tsx  Mark.tsx  Rail.tsx  ResultsGrid.tsx  SearchBar.tsx  StatsBar.tsx  (+2 more)
src/shared/: types.ts
tests/: api.test.ts  pathGuard.test.ts  provision.test.ts  sidecar.test.ts
(+18 files in other folders)
